# graspp_2025_spring

./: .gitignore  2b63cf6c-2ead-4e13-baab-aa58e0f950ba_Series - Metadata.csv  README.md  a63b8b46-f6d8-4de1-ac51-7666d978adee_Series - Metadata.csv  data_merge.py  environment.yml  merged_data.csv  pyproject.toml  requirements.txt
HW1_GONG_Kuiyuan/: HW1_GONG_Kuiyuan.ipynb  HW1_test.ipynb
data/: HW1_LiYuhang.py  US.PopTotal_20250427_130252.csv
data/Assignment_1/: merch_export_data.csv
data/clean/: CO2percapita_clean.csv  ExternalFinanceClean_IMF.csv  GDPpercapita_clean.csv  ILOWB_laborwage_Clean.csv  Merge_CPIAvsWAGE.csv  Merged_Trade_ExternalFinance_IMF.csv  OWD_GDP_Clean.csv  OWD_inflation_Clean.csv  OWD_schoolingyear_Clean.csv  TradeTariffsClean_IMF.csv  WB_CPIA_Clean.csv  clean_CBIData_Romelli_2025.csv  clean_macro_data.csv  merged_poland_by.csv
data/homework1/: merged_data_jp.csv  oecd_jp.csv
data/processed/: Correlation_Matrix.csv  Descriptive_Statistics.csv  Merged_GDP_TaxRevenue.csv  TaxRevenue.csv
data/raw/: 2013_starting_salary.csv  2014_starting_salary.csv  2015_starting_salary.csv  2016_starting_salary.csv  2017_starting_salary.csv  2018_starting_salary.csv  2019_starting_salary.csv  2021_starting_salary.csv  2022_starting_salary.csv  2023_starting_salary.csv  2024_starting_salary.csv  CO2percapita_raw.csv  (+14 more)
notebooks/: HW1_Yukaijin.ipynb  MPSforAgriProducts.ipynb  newnotebook_baird.ipynb
src/: HW1_ChangYeeSol.py  HW1_Yukaijin.py  clean_tax_data.py  data_processing.py  f_download_PradanaErlanggaGilang.py  f_manipulation_PradanaErlanggaGilang.py
(+247 files in other folders)
