[project]
name = "graspp-2025-spring"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=5.5.0",
    "anthropic>=0.54.0",
    "arxiv>=2.2.0",
    "en-core-web-sm",
    "folium>=0.19.5",
    "gradio>=5.29.0",
    "huggingface-hub>=0.30.2",
    "jupyter>=1.1.1",
    "langchain>=0.3.25",
    "langchain-anthropic>=0.3.15",
    "langchain-community>=0.3.25",
    "lxml>=5.3.1",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pdfplumber>=0.11.7",
    "plotly>=6.0.1",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.1.0",
    "rank-bm25>=0.2.2",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "selenium>=4.33.0",
    "smolagents>=1.15.0",
    "spacy>=3.8.7",
    "statsmodels>=0.14.4",
    "streamlit>=1.45.0",
    "torch>=2.7.0",
    "transformers>=4.52.4",
    "wordcloud>=1.9.4",
]

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }
